# can-frame-visualizer

./: CMakeLists.txt  Main.qml  README.md  main.cpp
include/: BitStuffing.hpp  CANBackend.hpp  CANFrame.hpp  CRC15.hpp
src/: BitStuffing.cpp  CANBackend.cpp  CANFrame.cpp  CRC15.cpp
